fix overflow y body

--- a/styles/style.css
+++ b/styles/style.css
@@ -157,10 +157,7 @@ body {
 .modal__desc {
     font-size: 36px;
     line-height: 36px;
-}
-
-.modal__desc {
-    margin-top: 77px;
+    margin-top: 24px;
 }
 
 .modal__desc:last-child {
@@ -177,7 +174,7 @@ body {
     background-color: #181820;
     border-radius: 30px;
     color: #FFFFFF;
-    margin-top: 77px;
+    margin-top: 36px;
     width: 100%;
     height: 100px;
     align-items: center;
